@@ -10,9 +10,7 @@
 
   Copyright (C) 2001, 2002, 2003 CodeSourcery LLC.  This material may
   be distributed only subject to the terms and conditions set forth in
-  the Software Carpentry Open Publication License, which is available at:
-
-    http://www.software-carpentry.com/openpub-license.html
+  the Open Publication License.
 
 -->
 <chapter id="chap-common-manual">
