@@ -7,11 +7,9 @@
   Contents:
     Software Carpentry Open Publication License text.
 
-  Copyright (C) 2000, 2001 CodeSourcery LLC.  This material may
-  be distributed only subject to the terms and conditions set forth in
-  the Software Carpentry Open Publication License, which is available at:
-
-    http://www.software-carpentry.com/openpub-license.html
+  Copyright (C) 2000, 2001 CodeSourcery LLC.  This material may be
+  distributed only subject to the terms and conditions set forth in
+  the Open Publication License.
 
 -->
 <blockquote>
@@ -28,9 +26,7 @@
   <blockquote>
    <para>Copyright &copy; 2000, 2001 by CodeSourcery LLC.  This
    material may be distributed only subject to the terms and
-   conditions set forth in the Software Carpentry Open Publication
-   License, which is available at
-   http://sc-archive.codesourcery.com/openpub-license.html .</para>
+   conditions set forth in the Open Publication License.</para>
   </blockquote>
  </para>
 
